--- a/B_i253121_i253034_HTML.html
+++ b/B_i253121_i253034_HTML.html
@@ -1,2 +1,94 @@
+<!DOCTYPE html>
 <html>
+<head>
+<style>
+    .top-header {
+    display: flex;
+    justify-content: space-between;   /* Left — Center — Right */
+    align-items: center;
+    padding: 15px 30px;
+    width: 100%;
+    box-sizing: border-box;
+}
+ .left {
+    display: flex;
+    align-items: center;
+    gap: 10px;  /* space between logo & text */
+}
+
+
+
+
+ .centered-name {
+    flex: 1;              /* pushes center to middle */
+    text-align: center;
+    margin: 0 20px;    
+    font-size: 28px;
+    font-weight: bold;
+}
+
+/* RIGHT SIDE (Search + Icons) */
+ .right {
+     display:flex;
+    align-items: center;
+    gap: 10px;
+}
+.nav-links {
+    display: flex;          /* horizontal row */
+    justify-content: center; /* center the links */
+    gap: 100px;              /* space between links */
+    margin-top: 10px;
+    padding-right: 100px;       /* space below header */
+}
+.main-h1  {
+    display:flex;
+   justify-content:center;
+    padding-right: 170px ;
+}
+.main-h2  {
+    display:flex;
+    justify-content: center;
+    padding-right: 170px ;
+}
+
+
+</style>
+</head>
+
+<body>
+    <header>
+    <div class="top-header">
+    <div class="left">
+        <span>🐯</span>
+        <span>سَحَر</span>
+    </div>
+    <h2 class="centered-name">Saher's closet</h2>
+    <div class="right">
+    <span>🔍</span>
+    <input type="text" placeholder="search">
+    <button class="icon">🛒</button>
+    </div>
+    </div>
+     <nav class="nav-links">
+        <a href="'#">About</a>
+        <a href="'#">Contact</a>
+        <a href="'#">products</a>
+        <a href="'#">home</a>
+    </nav>
+    </header>
+    
+
+<main>
+    <h1 class="main-h1">Saher's closet</h1>
+    <h2 class="main-h2">About us page</h2>
+    <section class="story-box">
+    <h3>our story</h3><p>"Saher's closet":A contemporary fashion brand mashing Desi and western culture confidently leading the industry in providing the high quality fabric and unprecedented design aesthetics.with the backing of one of the largest names in the textile industry,we are committed to offering a seamless and comprehensive shopping experience globally that includes a wide range of apparel for women living in south Asain diaspore.
+        we aim to provide our customers with a complete lifestyle experience combining quality,value,and style
+    </p>
+
+    </section>
+</main>
+</body>
 </html>
+  
+  
