created contact page

--- a/i253034_se_b_contact.html
+++ b/i253034_se_b_contact.html
@@ -157,7 +157,7 @@
         <a href="#">About</a>
         <a href="#" style="color:red;">Contact</a>
         <a href="#">Products</a>
-        <a href="#">Home</a>
+        <a href="#">Home</a>t
     </nav>
 </header>
 
