changes to css so it will work
- wasnt working before
- incorrect css path in html
- incorrect font import

--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang = "en">
-<html>
 <head>
-    <meta charset = "UTF-8"> <---added for urdu---->
+    <meta charset = "UTF-8"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
-     <link rel ="stylesheet" href = "css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+     <link rel ="stylesheet" href = "../IICT PROJECT/CSS/style.css">
+<title>Saher's Closet</title>
+
+     
 </head>
 
 <body>
