created About Us page

--- a/i253034_se_b_about.html
+++ b/i253034_se_b_about.html
@@ -100,17 +100,17 @@
     </div>
     </div>
      <nav class="nav-links">
-        <a href="'#">About</a>
-        <a href="'#">Contact</a>
-        <a href="'#">products</a>
-        <a href="'#">home</a>
+        <a href="#" style="color:red;">About</a>
+        <a href="#">Contact</a>
+        <a href="#">products</a>
+        <a href="#">Home</a>
     </nav>
     </header>
     
 
 <main class="main">
     <h1 class="h1"><span class="red-title">Saher's closet</span></h1>
-    <h2 class="main-h2">About us page</h2>
+    <h2 class="main-h2">About us</h2>
     <div class="about-container">
     <p>our story</p>
     <p>"Saher's closet":A contemporary fashion brand mashing Desi and western culture confidently leading the industry in providing the high quality fabric and unprecedented design aesthetics.with the backing of one of the largest names in the textile industry,we are committed to offering a seamless and comprehensive shopping experience globally that includes a wide range of apparel for women living in south Asain diaspore.
@@ -118,11 +118,12 @@
     </p>
      <div class="image-row">
                 <div>
-    <img src="c:\Users\Hp\Desktop\25i_3034\images\6218f22ff1b91.jpg" alt="Our team at the Design Awards" width="300" height="150">
+    
+    <img src="images/image7.png" alt="Our team at the Design Awards" width="300" height="150">
     <p>Our team at the award show</p>
     </div>
     <div>
-    <img src="c:\Users\Hp\Desktop\25i_3034\images\imag2.jpeg" width="300" height="150">
+    <img src="images/image9.png" width="300" height="150">
     </div>
     <div>
     <h3>Design Quality</h3>
