created About Us page

--- a/i253034_se_b_about.html
+++ b/i253034_se_b_about.html
@@ -128,6 +128,7 @@
     <div>
     <h3>Design Quality</h3>
     <p>At Saher's closet ,design is more than appearance, it is the language through which culure, confidence, and individuality are expressed</p>
+    <p>All images are Generated with AI Chatgtp</p>
     </div>
 </div>
 </div>
